# X11Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  License  README.md  X11Engine.sln
X11Engine/: Buffer.h  CMakeLists.txt  ChunkAllocator.h  Component.h  ComponentManager.h  Entity.h  EntityManager.cpp  EntityManager.h  Event.h  EventDelegate.h  EventManager.h  GlobalAllocator.h  Graphics.cpp  Graphics.h  Helper.h  IComponent.h  IEntity.h  PixelShader.hlsl  StackAllocator.cpp  SwapChain.cpp  SwapChain.h  System.h  SystemManager.h  VertexShader.hlsl  Window.cpp  Window.h  X11Engine.vcxproj  X11Engine.vcxproj.filters  main.cpp
X11Engine/Assets/Shaders/Sky/: Sky.hlsl  SkyPrerender.hlsl
X11Engine/Assets/Shaders/Stars/: Stars.hlsl
X11Engine/Assets/Shaders/StaticMesh/: StaticMeshPS.hlsl  StaticMeshVS.hlsl
X11Engine/Controls/: Keyboard.h  Mouse.h
X11Engine/ECS/: CameraComponent.h  Component.h  ComponentManager.h  EntityManager.cpp  IEntity.h  ISystem.h  MeshComponent.h  SystemManager.h
X11Engine/ECS/Component/: Component.h  ComponentManager.cpp  ComponentManager.h  IComponent.h
X11Engine/ECS/Component/Components/: AnimationComponent.h  CameraComponent.h  MeshComponent.h  PointLightComponent.h  PositionComponent.h  RenderComponent.h  TransformComponent.h
X11Engine/ECS/Entity/: Entity.h  EntityManager.cpp  EntityManager.h  IEntity.h
X11Engine/ECS/Entity/Entities/: Cube.h
X11Engine/ECS/System/: ISystem.h  System.h  SystemManager.h
X11Engine/ECS/System/Systems/: AnimationSystem.h  LookSystem.h  MovementSystem.h  RenderSystem.cpp  RenderSystem.h
X11Engine/Engine/ECS/Component/: ComponentManager.h  IComponent.h
X11Engine/Engine/ECS/Entity/: Entity.h  EntityManager.h
X11Engine/Engine/ECS/System/: ISystem.h  SystemManager.h
X11Engine/Engine/Event/: Event.h  EventManager.cpp  EventManager.h
X11Engine/Engine/Scene/: Scene.cpp  Scene.h  Transform.cpp  Transform.h
X11Engine/Event/: Event.h  EventDelegate.h  EventManager.cpp  EventManager.h
X11Engine/Framework/FileReader/: FileReader.cpp  FileReader.h
X11Engine/Framework/Graphics/: Animation.h  Camera.h  Graphics.cpp  Graphics.h  Light.h  Material.h  Mesh.h  Model.h  SwapChain.cpp  SwapChain.h
X11Engine/Framework/Logger/: Logger.h
X11Engine/Framework/MaterialRegistry/: MaterialRegistry.h
X11Engine/Framework/Memory/: ChunkAllocator.cpp  LinearAllocator.h  Memory.h  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.h
X11Engine/Framework/TaskManager/: TaskManager.cpp
X11Engine/Framework/Types/: AABB.h  Quaternion.h  Types.h  Vector3.h
X11Engine/Framework/Window/: Window.cpp  Window.h
X11Engine/Framework/Window/Interface/: Interface.cpp  Interface.h
X11Engine/Graphics/: Bone.h  Buffer.cpp  Camera.h  Graphics.cpp  Graphics.h  Light.h  Material.h  Mesh.h  Model.h  PixelShader.hlsl  ShaderDefines.h  SwapChain.cpp  Texture.cpp  Texture.h  VertexShader.hlsl
X11Engine/Graphics/Animation/: Animation.h
X11Engine/Loader/: Loader.cpp  Loader.h
X11Engine/Logger/: Logger.h
X11Engine/MaterialRegistry/: MaterialRegistry.h
X11Engine/Math/: Matrix.h  Quaternion.h  Vector3.h  Vector4.h
X11Engine/Memory/: Allocator.h  ChunkAllocator.h  GlobalAllocator.cpp  GlobalAllocator.h  LinearAllocator.cpp
X11Engine/Scene/: AABB.h  Scene.cpp  Scene.h  Transform.h
X11Engine/SceneGraph/: SceneGraph.h
X11Engine/Scripts/: Main.lua  Player.lua  PlayerMove.lua  Vector3.lua
X11Engine/Shaders/: BoneVShader.hlsl  PixelShader.hlsl  SkyboxPShader.hlsl  SkyboxVShader.hlsl  VertexShader.hlsl
X11Engine/TaskManager/: TaskManager.cpp  TaskManager.h
X11Engine/Timer/: TImer.h
X11Engine/Types/: Matrix.h  Quaternion.h  Types.h  Vector2.h  Vector3.h  Vector4.h  Vertex.h
X11Engine/src/: CMakeLists.txt  main.cpp
X11Engine/src/Assets/: CMakeLists.txt
X11Engine/src/Assets/Animation/: Animation.h  AnimationRegistry.cpp  AnimationRegistry.h  CMakeLists.txt
X11Engine/src/Assets/Mesh/: CMakeLists.txt  Mesh.h  MeshBuilder.h  MeshRegistry.cpp  MeshRegistry.h
X11Engine/src/Assets/Model/: CMakeLists.txt  MeshBuilder.cpp  Model.h  ModelRegistry.cpp  ModelRegistry.h  StaticVertex.h
X11Engine/src/Assets/Shader/: CMakeLists.txt  ShaderRegistry.cpp  (+1 more)
X11Engine/src/Camera/: CMakeLists.txt  CameraData.h  CameraManager.cpp  CameraManager.h  ICamera.h  StaticProjectionCamera.cpp  StaticProjectionCamera.h
X11Engine/src/Components/: CMakeLists.txt
X11Engine/src/Config/: AppConfig.cpp  AppConfig.h  CMakeLists.txt
X11Engine/src/Dependencies/: CMakeLists.txt
X11Engine/src/ECS/: CMakeLists.txt
X11Engine/src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h
X11Engine/src/Event/: CMakeLists.txt  Event.h  EventBus.cpp  EventBus.h  EventListener.cpp  EventListener.h  EventSubscription.cpp  EventSubscription.h
X11Engine/src/FileReader/: CMakeLists.txt
X11Engine/src/Graphics/: CMakeLists.txt  Format.cpp  Format.h
X11Engine/src/Input/: CMakeLists.txt  GameInputContext.h  Input.cpp  Input.h  InputContext.h  PhysicalInput.cpp  PhysicalInput.h
X11Engine/src/Logger/: CMakeLists.txt  Logger.cpp  Logger.h  LoggerFactory.cpp  LoggerFactory.h
X11Engine/src/Overlay/: CMakeLists.txt  Overlay.cpp  Overlay.h
X11Engine/src/Physics/: CMakeLists.txt  PhysicsFactory.cpp  PhysicsFactory.h
X11Engine/src/Scene/: CMakeLists.txt  Scene.cpp  Scene.h
X11Engine/src/Script/: CMakeLists.txt  IScript.h
X11Engine/src/Scripts/: CMakeLists.txt
X11Engine/src/Shaders/: PixelShader.hlsl  VertexShader.hlsl
X11Engine/src/Systems/: CMakeLists.txt
X11Engine/src/Types/: CMakeLists.txt  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  TypeId.h  Vector3.h  Vector4.h  Vertex.h
X11Engine/src/Utility/: CMakeLists.txt  TypeIdHelper.cpp  TypeIdHelper.h
X11Engine/src/Window/: CMakeLists.txt  Window.cpp  Window.h
X11Engine/test/: CMakeLists.txt  main.cpp
X11Engine/test/ECS/: EntityRegistry_test.cpp  SystemDispatcher_test.cpp
X11Engine/test/Event/: EventBus_text.cpp
X11Engine/test/Script/: ScriptSandbox_test.cpp
X11Engine/test/Types/: Matrix_test.cpp  Quaternion_test.cpp  Transform_test.cpp
(+362 files in other folders)
